Added new fonts for improved ui

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icon fas fa-heart fa-4x"></i>
+          <i class="fas fa-user-ninja"></i>
           <h3 class="feature-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
