Optimize the frontend

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+            <button class="sign-up-btn btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            <button class="sign-up-btn btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
           </div>
         </div>
       </div>
@@ -195,8 +195,7 @@
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            <button class="sign-up-btn btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
 
           </div>
         </div>
@@ -213,7 +212,7 @@
 
   <section class="colored-section" id="cta">
 
-    <div class="container-fluid">
+    <div class="container-fluid download-apps">
 
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
@@ -259,9 +258,7 @@
               
                     
         </div>
-        <div class="move-up">
-            <span><i class="fas fa-arrow-circle-up fa-2x"></i></span>
-        </div>
+        <a class="totop" href="#"><i class="fa fa-arrow-up"></i></a>
     </footer>
 
 </body>
